--- a/announcements.html
+++ b/announcements.html
@@ -22,7 +22,7 @@
   </nav>
 
   <main style="padding:20px;">
-    <h2>Ads Page</h2>
+    <h2>Announcements Page</h2>
     <p>Your portal to Finance Department updates, materials, and opportunities.</p>
   </main>
 
