--- a/login.html
+++ b/login.html
@@ -1,271 +1,52 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Sign In</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body, html {
-      font-family: 'Segoe UI', sans-serif;
-      background: #0d0d0d;
-      color: white;
-      height: 100%;
-      overflow: hidden;
-    }
-
-    #particles-js {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-    }
-
-    .container {
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-    }
-
-    .login-box {
-      background: rgba(0, 0, 0, 0.85);
-      padding: 30px;
-      border-radius: 16px;
-      width: 100%;
-      max-width: 400px;
-      box-shadow: 0 0 20px rgba(255, 215, 0, 0.2);
-      text-align: center;
-    }
-
-    h2 {
-      color: gold;
-      margin-bottom: 15px;
-      font-size: 24px;
-      position: relative;
-    }
-
-    h2::after {
-      content: '';
-      position: absolute;
-      width: 60px;
-      height: 2px;
-      background: gold;
-      bottom: -8px;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-
-    input {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 6px;
-      background: #1a1a1a;
-      color: white;
-      font-size: 14px;
-    }
-
-    input:focus {
-      border: 1px solid gold;
-      background: #111;
-    }
-
-    .btn {
-      background: gold;
-      color: black;
-      padding: 12px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      width: 100%;
-      font-weight: bold;
-      margin-top: 10px;
-    }
-
-    .btn:hover {
-      background: #ffd700d0;
-    }
-
-    .resend-btn {
-      margin-top: 10px;
-      font-size: 13px;
-      background: transparent;
-      border: none;
-      color: gold;
-      cursor: pointer;
-      text-decoration: underline;
-      display: none;
-    }
-
-    .signup-link {
-      margin-top: 15px;
-      font-size: 14px;
-    }
-
-    .signup-link a {
-      color: gold;
-      text-decoration: none;
-    }
-
-    .signup-link a:hover {
-      text-decoration: underline;
-    }
-
-    /* Toast */
-    .toast {
-      position: fixed;
-      top: 30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #111;
-      color: gold;
-      padding: 12px 20px;
-      border-radius: 8px;
-      border: 1px solid gold;
-      font-size: 14px;
-      z-index: 9999;
-      box-shadow: 0 0 10px rgba(255, 215, 0, 0.3);
-      animation: fadeInOut 3s ease-in-out forwards;
-    }
-
-    @keyframes fadeInOut {
-      0% { opacity: 0; transform: translateX(-50%) translateY(-10px); }
-      10% { opacity: 1; transform: translateX(-50%) translateY(0); }
-      90% { opacity: 1; }
-      100% { opacity: 0; transform: translateX(-50%) translateY(-10px); }
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FINHUB</title>
+  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="particles-js"></div>
+  <header style="background:#220033;padding:10px;text-align:center;">
+    <h1 style="color:#b37cd5;">FINHUB</h1>
+  </header>
 
-  <div class="container">
-    <div class="login-box">
-      <h2>Sign In</h2>
-      <input type="email" id="email" placeholder="Email Address" />
-      <input type="password" id="password" placeholder="Password" />
-      <button class="btn" onclick="signIn()">Sign In</button>
-      <button class="resend-btn" id="resendBtn" onclick="resendVerification()">Resend Verification Email</button>
+  <nav style="background:#1a0033;display:flex;justify-content:space-around;padding:10px 0;">
+    <a href="index.html">Home</a>
+    <a href="announcements.html">Announcements</a>
+    <a href="events.html">Events</a>
+    <a href="downloads.html">Downloads</a>
+    <a href="ads.html">Ads</a>
+  </nav>
 
-      <div class="signup-link">
-        Don't have an account? <a href="signup.html">Sign Up</a>
-      </div>
-    </div>
-  </div>
+  <main style="padding:20px;">
+    <h2>Login Page</h2>
+    <p>Your portal to Finance Department updates, materials, and opportunities.</p>
+  </main>
 
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
-      authDomain: "finsa-connect.firebaseapp.com",
-      projectId: "finsa-connect",
-      storageBucket: "finsa-connect.firebasestorage.app",
-      messagingSenderId: "126845965255",
-      appId: "1:126845965255:web:c82539297a8464873d7fe2"
-    };
+  <footer style="background:#220033;text-align:center;padding:10px;margin-top:40px;color:#aaa;">
+    Contact PRO for Ads: 08142452729 | AAUA Finance Dept. © 2025
+  </footer>
 
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
+  
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
+    authDomain: "finsa-connect.firebaseapp.com",
+    projectId: "finsa-connect",
+    storageBucket: "finsa-connect.firebasestorage.app",
+    messagingSenderId: "126845965255",
+    appId: "1:126845965255:web:c82539297a8464873d7fe2"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+  const db = firebase.firestore();
+</script>
 
-    function showToast(message) {
-      const toast = document.createElement("div");
-      toast.className = "toast";
-      toast.textContent = message;
-      document.body.appendChild(toast);
-      setTimeout(() => { toast.remove(); }, 3000);
-    }
-
-    function signIn() {
-      const email = document.getElementById("email").value.trim();
-      const password = document.getElementById("password").value.trim();
-      const resendBtn = document.getElementById("resendBtn");
-
-      if (!email || !password) {
-        showToast("Please fill in both fields.");
-        resendBtn.style.display = "none";
-        return;
-      }
-
-      auth.signInWithEmailAndPassword(email, password)
-        .then((userCredential) => {
-          const user = userCredential.user;
-          if (!user.emailVerified) {
-            auth.signOut();
-            showToast("Your email is not verified.");
-            resendBtn.style.display = "inline-block";
-          } else {
-            showToast("Sign in successful.");
-            resendBtn.style.display = "none";
-            setTimeout(() => {
-              window.location.href = "dashboard.html";
-            }, 1000);
-          }
-        })
-        .catch((error) => {
-          let msg = "Sign in failed.";
-          if (error.code === "auth/wrong-password") msg = "Incorrect password.";
-          else if (error.code === "auth/user-not-found") msg = "No account found with this email.";
-          else if (error.code === "auth/invalid-email") msg = "Invalid email format.";
-          showToast(msg);
-          resendBtn.style.display = "none";
-        });
-    }
-
-    function resendVerification() {
-      const email = document.getElementById("email").value.trim();
-      const password = document.getElementById("password").value.trim();
-
-      auth.signInWithEmailAndPassword(email, password)
-        .then((userCredential) => {
-          const user = userCredential.user;
-          if (!user.emailVerified) {
-            user.sendEmailVerification()
-              .then(() => {
-                showToast("Verification email sent.");
-                auth.signOut();
-              })
-              .catch(() => {
-                showToast("Failed to send verification email.");
-              });
-          }
-        })
-        .catch(() => {
-          showToast("Could not verify credentials.");
-        });
-    }
-  </script>
-
-  <!-- Particles.js Background -->
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-  <script>
-    particlesJS("particles-js", {
-      particles: {
-        number: { value: 60 },
-        color: { value: "#ffffff" },
-        shape: { type: "circle" },
-        opacity: { value: 0.5 },
-        size: { value: 2 },
-        line_linked: {
-          enable: true,
-          distance: 120,
-          color: "#ffffff",
-          opacity: 0.4,
-          width: 1
-        },
-        move: { enable: true, speed: 1 }
-      },
-      interactivity: {
-        detect_on: "canvas",
-        events: {
-          onhover: { enable: true, mode: "grab" }
-        }
-      }
-    });
-  </script>
 </body>
 </html>
