--- a/login.html
+++ b/login.html
@@ -1,52 +1,130 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FINHUB</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login - Finance Point</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #0d0d0d;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      padding: 20px;
+    }
+    .container {
+      background: #1a1a1a;
+      padding: 30px;
+      border: 2px solid gold;
+      border-radius: 12px;
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+    }
+    h2 {
+      color: gold;
+      margin-bottom: 20px;
+    }
+    input {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border-radius: 6px;
+      border: none;
+      background: #333;
+      color: white;
+    }
+    input:focus {
+      outline: 2px solid gold;
+    }
+    button {
+      width: 100%;
+      padding: 12px;
+      background: gold;
+      color: black;
+      border: none;
+      border-radius: 6px;
+      font-weight: bold;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+    button:hover {
+      background: #ffd700;
+    }
+    #message {
+      margin-top: 15px;
+      font-weight: bold;
+      font-size: 14px;
+    }
+    .link {
+      margin-top: 15px;
+      color: gold;
+    }
+    .link a {
+      color: #ffd700;
+      text-decoration: none;
+    }
+    .link a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <header style="background:#220033;padding:10px;text-align:center;">
-    <h1 style="color:#b37cd5;">FINHUB</h1>
-  </header>
+  <div class="container">
+    <h2>Sign In</h2>
+    <input type="email" id="email" placeholder="Email" required />
+    <input type="password" id="password" placeholder="Password" required />
+    <button onclick="login()">Sign In</button>
+    <div id="message"></div>
+    <div class="link">
+      Don't have an account? <a href="signup.html">Create one</a>
+    </div>
+  </div>
 
-  <nav style="background:#1a0033;display:flex;justify-content:space-around;padding:10px 0;">
-    <a href="index.html">Home</a>
-    <a href="announcements.html">Announcements</a>
-    <a href="events.html">Events</a>
-    <a href="downloads.html">Downloads</a>
-    <a href="ads.html">Ads</a>
-  </nav>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
+      authDomain: "finsa-connect.firebaseapp.com",
+      projectId: "finsa-connect",
+      storageBucket: "finsa-connect.firebasestorage.app",
+      messagingSenderId: "126845965255",
+      appId: "1:126845965255:web:c82539297a8464873d7fe2"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
 
-  <main style="padding:20px;">
-    <h2>Login Page</h2>
-    <p>Your portal to Finance Department updates, materials, and opportunities.</p>
-  </main>
+    function login() {
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value;
+      const messageEl = document.getElementById("message");
 
-  <footer style="background:#220033;text-align:center;padding:10px;margin-top:40px;color:#aaa;">
-    Contact PRO for Ads: 08142452729 | AAUA Finance Dept. © 2025
-  </footer>
+      if (!email || !password) {
+        messageEl.textContent = "Please enter both email and password.";
+        messageEl.style.color = "tomato";
+        return;
+      }
 
-  
-<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
-    authDomain: "finsa-connect.firebaseapp.com",
-    projectId: "finsa-connect",
-    storageBucket: "finsa-connect.firebasestorage.app",
-    messagingSenderId: "126845965255",
-    appId: "1:126845965255:web:c82539297a8464873d7fe2"
-  };
-  firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
-  const db = firebase.firestore();
-</script>
-
+      auth.signInWithEmailAndPassword(email, password)
+        .then(() => {
+          messageEl.textContent = "Login successful! Redirecting...";
+          messageEl.style.color = "limegreen";
+          setTimeout(() => {
+            window.location.href = "dashboard.html";
+          }, 4000); // 4 seconds
+        })
+        .catch((error) => {
+          messageEl.textContent = error.message;
+          messageEl.style.color = "tomato";
+        });
+    }
+  </script>
 </body>
 </html>
